More PMD and API clean up: major API clean up in the UIT
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/cdk/trunk@11762 eb4e18e3-b210-0410-a6ab-dec725e4b171